add role and authorization